# haskell-book

./: haskell-book.cabal
src/: ReaderPractice.hs
src/17/: ApplicativePractice.hs
src/25/: ComposePractice.hs
src/26/: ChapterExercises.hs  FixTheCode.hs  HitCounter.hs  MonadTransformersPractice.hs  Mora.hs  ScottyExample.hs
src/28/: DifferenceList.hs  Queue.hs
