name:                haskell-book
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-book#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-book
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , text >= 1.2.2.0
                     , criterion

executable haskell-book-25
  hs-source-dirs:      src/25
  main-is:             ComposePractice.hs
  default-language:    Haskell2010
  build-depends:       base
                     , text >= 1.2.2.0
                     , criterion

executable haskell-book-26
  hs-source-dirs:      src/26
  main-is:             MonadTransformersPractice.hs
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , scotty
                     , text >= 1.2.2.0
                     , transformers
                     , criterion

executable haskell-book-28
  hs-source-dirs:      src/28
  main-is:             DifferenceList.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       base
                     , containers
                     , scotty
                     , text >= 1.2.2.0
                     , transformers
                     , criterion